--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@types/d3": "^7.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "read-excel-file": "^5.8.4",
-    "xlsx": "^0.18.5"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
