--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,16 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/NewBubbleChart.jsx", "utils/index.js", "app/page.jsx", "app/components/BubbleChart.jsx", "app/components/DynamicLineGraph.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/components/NewBubbleChart.jsx",
+    "utils/index.js",
+    "app/page.jsx",
+    "components/BubbleChart.jsx",
+    "components/DynamicLineGraph.jsx"
+  ],
   "exclude": ["node_modules"]
 }
